--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans', sans-serif;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -165,7 +165,7 @@ form button {
 }
 
 .join-btn {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .join-btn button {
@@ -174,4 +174,5 @@ form button {
     padding: 12px 30px;
     border: 1px solid #fff;
     color: #fff;
+    box-shadow: 0 10px 50px rgba(0, 0, 0, 0.08);
 }
